product/product.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Open+Sans&family=Roboto:wght@300&display=swap');

body{
    margin:0;
    padding: 0;
    height: 100vh;
    box-sizing: border-box;
    background-color: var(--bg-color);
}



.nav{
    grid-area: header;
    grid-column-start: 1;
    grid-column-end: 6;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    color: var(--primary);
}
.align-center{
    align-content: center;
}

.input{
    background:#ecf0f1;
    border: #ccc 1px solid;
    border-bottom: #ccc 2px solid;
    padding: 8px;
    width:250px;
    color:var(--primary);
    margin-top:10px;
    font-size:1em;
    border-radius:4px;
    transition: 0.50s;
    font-family: 'Quicksand', sans-serif;
  }

.bi{
    font-size: 2rem;
    color: var(--gray-color);
}
.bi:hover{
    color: var(--primary);
    transition: 0.3s;
}
.topnav-link{
    margin: 6px;
}

.header-btns{
    display: flex;
    align-content: center;
    background: none;
    color: var(--primary);
}

.main-container{
    display: grid;
    grid-template-columns: 1fr 5fr;
   margin-top: 2rem;
}

.product-side-bar{
    display: flex;
    flex-direction: column;
    
}

.filter-btn{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.rangeslider{
    width: 75%;
}
  
.myslider {
    -webkit-appearance: none;
    background: var(--gray-color)  ;
    width: 75%;
    height: 20px;
    opacity: 2;
   }
  
  
.myslider::-webkit-slider-thumb {
    -webkit-appearance: none;
    cursor: pointer;
    background: var(--primary)  ;
    width: 5%;
    height: 20px;
}
  
  
.myslider:hover {
    opacity: 1;
    cursor: pointer;
}

.price-range-bar{
    display: flex;
    justify-content: space-around;
}

.side-bar-category{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.ratings{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.sort-by{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.bar-heading{
    font-size: 1rem;
    font-weight: 600;
}

/* display */

.product-display{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    justify-items: flex-start;
    grid-column-gap: 2rem;
    width: 100%;
    margin: 0 auto;
    overflow-y: scroll;

}

.card-container{
    border: 1px solid black;
    background-color: blanchedalmond;
    display: flex;
    flex-direction: column;
    max-height: 10rem;
}

.card-img-top{
    width: 18rem;
}

.card-body{
    padding: 5%;
}

.btn-card{
   background-color:rgb(0,105,218);
   padding: 3%;
   text-decoration: none;
   color: white;
   border-radius: 2%;
}

.btn-card:hover{
    background-color:rgb(47, 141, 241);
}

